No device orientation/motion event sent when sensor reading timestamp is zero

This CL fixes the issue when the sensor is initialized but its sensor
data is still not available, in this case, device orientation/motion event
should not be sent until there is sensor data.

Bug: 799043
Change-Id: I6b1b82a9f465b47bafc9e33e8be007d81a614f75