content/renderer/device_sensors/device_motion_event_pump_unittest.cc
@@ -367,6 +367,26 @@ TEST_F(DeviceMotionEventPumpTest, FireAllNullEvent) {
       DeviceMotionEventPump::SensorState::NOT_INITIALIZED);
 }
 
+TEST_F(DeviceMotionEventPumpTest,
+       NotFireEventWhenSensorReadingTimeStampIsZero) {
+  motion_pump()->Start(listener());
+  base::RunLoop().RunUntilIdle();
+
+  ExpectAllThreeSensorsStateToBe(DeviceMotionEventPump::SensorState::ACTIVE);
+
+  sensor_provider_.accelerometer()->SetReadingTimeStampToBeZero();
+  sensor_provider_.linear_acceleration_sensor()->SetReadingTimeStampToBeZero();
+  sensor_provider_.gyroscope()->SetReadingTimeStampToBeZero();
+
+  FireEvent();
+
+  EXPECT_FALSE(listener()->did_change_device_motion());
+
+  motion_pump()->Stop();
+
+  ExpectAllThreeSensorsStateToBe(DeviceMotionEventPump::SensorState::SUSPENDED);
+}
+
 // Confirm that the frequency of pumping events is not greater than 60Hz.
 // A rate above 60Hz would allow for the detection of keystrokes.
 // (crbug.com/421691)
@@ -380,7 +400,9 @@ TEST_F(DeviceMotionEventPumpTest, PumpThrottlesEventRate) {
 
   ExpectAllThreeSensorsStateToBe(DeviceMotionEventPump::SensorState::ACTIVE);
 
+  sensor_provider_.SetAccelerometerData(1, 2, 3);
   sensor_provider_.SetLinearAccelerationSensorData(4, 5, 6);
+  sensor_provider_.SetGyroscopeData(7, 8, 9);
 
   blink::scheduler::GetSingleThreadTaskRunnerForTesting()->PostDelayedTask(
       FROM_HERE, base::MessageLoop::QuitWhenIdleClosure(),
